dark mode fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,64 +69,13 @@ body::-webkit-scrollbar {
   }
 }
 
-.background-night {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  background: #060612;
-  overflow: hidden;
-  z-index: -1;
-}
-
-.background-night span {
-  width: 37vmin;
-  height: 37vmin;
-  border-radius: 37vmin;
-  backface-visibility: hidden;
-  position: absolute;
-  animation: move;
-  animation-duration: 40;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-
-.background-night span:nth-child(0) {
-  color: #265E58;
-  top: 84%;
-  left: 32%;
-  animation-duration: 36s;
-  animation-delay: -67s;
-  transform-origin: 24vw -10vh;
-  box-shadow: 74vmin 0 9.536666985650024vmin currentColor;
-}
-.background-night span:nth-child(1) {
-  color: #265E58;
-  top: 65%;
-  left: 35%;
-  animation-duration: 10s;
-  animation-delay: -15s;
-  transform-origin: -19vw 2vh;
-  box-shadow: -74vmin 0 9.405120815309905vmin currentColor;
-}
-.background-night span:nth-child(2) {
-  color: #265E58;
-  top: 57%;
-  left: 29%;
-  animation-duration: 89s;
-  animation-delay: -58s;
-  transform-origin: 16vw 24vh;
-  box-shadow: 74vmin 0 10.068726171629105vmin currentColor;
-}
-
 .background {
   position: fixed;
   width: 100vw;
   height: 100vh;
   top: 0;
   left: 0;
-  background: #DFFEFA;
+  background: #dffefa;
   overflow: hidden;
   z-index: -1;
 }
@@ -169,4 +118,55 @@ body::-webkit-scrollbar {
   animation-delay: -58s;
   transform-origin: 16vw 24vh;
   box-shadow: 74vmin 0 10.068726171629105vmin currentColor;
+}
+
+@media (prefers-color-scheme: dark) {
+  .background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #060612;
+    overflow: hidden;
+    z-index: -1;
+  }
+  .background span {
+    width: 37vmin;
+    height: 37vmin;
+    border-radius: 37vmin;
+    backface-visibility: hidden;
+    position: absolute;
+    animation: move;
+    animation-duration: 40;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
+  .background span:nth-child(0) {
+    color: #265e58;
+    top: 65%;
+    left: 35%;
+    animation-duration: 10s;
+    animation-delay: -15s;
+    transform-origin: -19vw 2vh;
+    box-shadow: -74vmin 0 9.405120815309905vmin currentColor;
+  }
+  .background span:nth-child(1) {
+    color: #265e58;
+    top: 65%;
+    left: 35%;
+    animation-duration: 10s;
+    animation-delay: -15s;
+    transform-origin: -19vw 2vh;
+    box-shadow: -74vmin 0 9.405120815309905vmin currentColor;
+  }
+  .background span:nth-child(2) {
+    color: #265e58;
+    top: 57%;
+    left: 29%;
+    animation-duration: 89s;
+    animation-delay: -58s;
+    transform-origin: 16vw 24vh;
+    box-shadow: 74vmin 0 10.068726171629105vmin currentColor;
+  }
 }
